--- a/review-service-ms.yml
+++ b/review-service-ms.yml
@@ -17,3 +17,7 @@ spring:
         hibernate:
             ddl-auto: update
         show-sql: true
+eureka:
+  instance:
+    hostname: localhost
+    prefer-ip-address: false
