--- a/job-service-ms.yml
+++ b/job-service-ms.yml
@@ -21,3 +21,6 @@ eureka:
   instance:
     hostname: localhost
     prefer-ip-address: false
+    instance-id: ${spring.application.name}:${server.port}
+    status-page-url: http://localhost:${server.port}/actuator/info
+    health-check-url: http://localhost:${server.port}/actuator/health
