--- a/user-service-ms.yml
+++ b/user-service-ms.yml
@@ -16,5 +16,8 @@ eureka:
   instance:
     hostname: localhost
     prefer-ip-address: false
+    instance-id: ${spring.application.name}:${server.port}
+    status-page-url: http://localhost:${server.port}/actuator/info
+    health-check-url: http://localhost:${server.port}/actuator/health
 server:
   port: 8084
